# expr-parser-calc

./: .gitignore  CMakeLists.txt  README-zh.md  README.md  test.cpp  test_encoding.cpp
include/: calculator.h  lexer.h  parser.h
src/: calculator.cpp  calculator_en.cpp  calculator_zh.cpp  lexer.cpp  main.cpp  parser.cpp
